# ft_irc

./: Book.cpp  Book.hpp  CMakeLists.txt  Channel.cpp  Channel.hpp  Client.cpp  Client.hpp  Makefile  ft_irc  header.hpp  main.cpp  parser.hpp  registration.cpp  registration.hpp  server.cpp  server.hpp  session.cpp  session.hpp  sockets.cpp  sockets.hpp
test/: BOT_ANTON.sh  bot  bot.cpp  bot.hpp  bot_anton  bot_client.cpp  main.cpp
